# seo_study

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Anotacoes/: links_uteis.txt
Anotacoes/Formacao_Analista_SEO/anotacoes_extras/: 2023_top_trends.ipynb  Ferramentas_Uteis.ipynb
Anotacoes/Formacao_Analista_SEO/modulo_1/: 01-objetivos_do_curso.ipynb  01-objetivos_do_curso.md
Anotacoes/Formacao_Analista_SEO/modulo_2/: 01-internet_e_google.ipynb  01-internet_e_google.md  02-o_que_e_SEO.ipynb  02-o_que_e_SEO.md  03-pilares_do_SEO.ipynb  03-pilares_do_SEO.md  04-como-funcionam-os-algoritmos.ipynb  04-como-funcionam-os-algoritmos.md  05-diretrizes-do-google-eat-ymyl.ipynb  05-diretrizes-do-google-eat-ymyl.md  06-SEO_Onpage_Offpage.ipynb  06-SEO_Onpage_Offpage.md  07-whitehat_greyhat_blackhat.ipynb  07-whitehat_greyhat_blackhat.md
Anotacoes/Formacao_Analista_SEO/modulo_3_pilar_tecnologia/: 01-indexabilidade_do_site_como_funciona.ipynb  01-indexabilidade_do_site_como_funciona.md  02-tags_noindex_nofollow.ipynb  02-tags_noindex_nofollow.md  03-o_que_e_um_sitemap.ipynb  03-o_que_e_um_sitemap.md  04-o_que_e_o_robots.txt.ipynb  04-o_que_e_o_robots.txt.md  05-core_web_vitals.ipynb  05-core_web_vitals.md  06-performance_e_pagespeed_insights.md  07-hospedagem_e_servidor.ipynb  07-hospedagem_e_servidor.md  08-otimizando_css_e_js.md  09-otimizacao_de_imagens.ipynb  09-otimizacao_de_imagens.md  10-para_que_servem_redirects.ipynb  10-para_que_servem_redirects.md  11-tag_canonical.md  12-schema.ipynb  (+1 more)
Anotacoes/SEO_2020_Livro/: Google Core Update 2023.txt
(+93 files in other folders)
